--- a/index.html
+++ b/index.html
@@ -124,6 +124,7 @@ nav ul li a:hover, .active {
             <a href="/status">Status</a> page. To dive into our approach to scalability and performance, visit the 
             <a href="/scaling">Scaling</a> tab.
         </p>
+        <img src="team.png" alt="Developer Team" width="700">
     </section>
 </body>
 </html>
