--- a/status.html
+++ b/status.html
@@ -106,6 +106,11 @@ nav ul li a:hover, .active {
     <section class="content">
         <h2>Status Page</h2>
         <p>info and screenshots about the status page, fault injection, and notifications.</p>
+        <h3 class="left-text">Notifications</h3>
+        <p class="left-text">As developers, we need to know immediately if something is wrong. We can’t just rely on someone randomly checking the status page to see if a component is down. At the same time, we don’t want to assign someone to constantly monitor the status page. To address this, we developed a system that sends notifications whenever an issue arises.</p>
+        <p class="left-text">We modeled this system after the DevOps or engineer-on-call approach used by real software companies. In this system, one team member is designated as the on-call engineer at a time, with the responsibility rotating among the team. When an issue occurs, the on-call engineer receives a notification and must respond accordingly to resolve the problem as quickly as possible.</p>
+        <p class="left-text">To implement this, we coded a system to send email notifications via an SMTP server. These notifications provide immediate alerts when a component is down and also notify us when the system has returned to a healthy state. Below are some examples of emails we have received:</p>
+        <img src="notify.png" alt="Notifications" width="800">
     </section>
 </body>
 </html>
