--- a/status.html
+++ b/status.html
@@ -104,8 +104,17 @@ nav ul li a:hover, .active {
     </nav>
 
     <section class="content">
-        <h2>Status Page</h2>
-        <p>info and screenshots about the status page, fault injection, and notifications.</p>
+        <h2>Monitoring the Status</h2>
+        <h3 class="left-text">Status Page</h3>
+        <p class="left-text">info and screenshots about the status page</p>
+        <p class="left-text">
+            Here is a demo of how the Selenium bots register, log in, and make a move to simulate the user experience and ensure all of these components are functioning correctly:
+        </p>
+        <video width="640" height="360" controls>
+            <source src="botdemo.mp4" type="video/mp4">
+        </video>
+        <h3 class="left-text">Fault Injection</h3>
+        <p class="left-text">info and screenshots about the fault injection</p>
         <h3 class="left-text">Notifications</h3>
         <p class="left-text">As developers, we need to know immediately if something is wrong. We can’t just rely on someone randomly checking the status page to see if a component is down. At the same time, we don’t want to assign someone to constantly monitor the status page. To address this, we developed a system that sends notifications whenever an issue arises.</p>
         <p class="left-text">We modeled this system after the DevOps or engineer-on-call approach used by real software companies. In this system, one team member is designated as the on-call engineer at a time, with the responsibility rotating among the team. When an issue occurs, the on-call engineer receives a notification and must respond accordingly to resolve the problem as quickly as possible.</p>
