--- a/index.html
+++ b/index.html
@@ -105,9 +105,6 @@ nav ul li a:hover, .active {
 
     <section class="content">
         <h2 class="center-text">Welcome!</h2>
-        <p class="center-text">
-            Explore how chaos engineering strengthens web services and ensures system reliability.
-        <p>
             <strong>By:</strong> Catherine Bregou, Sam Lengyel, Angel Ortiz Martinez, Ntense Obono, Khizar Qureshi, and Bryan Yang.
         </p>
         </p>
@@ -121,9 +118,13 @@ nav ul li a:hover, .active {
         <p class="left-text">
             If you are interested in learning about the structure of our project, visit the 
             <a href="/project-outline">Project Outline</a> tab. If you want to explore how we monitor system health, check out the 
-            <a href="/status">Status</a> page. To dive into our approach to scalability and performance, visit the 
+            <a href="/status">Status</a> page. To dive into our approach to scalability, visit the 
             <a href="/scaling">Scaling</a> tab.
         </p>
+        <p class="left-text">
+            <br>  
+        </p>
+
         <img src="team.png" alt="Developer Team" width="700">
     </section>
 </body>
