added githup repo links and proposal pdf

--- a/project-outline.html
+++ b/project-outline.html
@@ -124,13 +124,13 @@ nav ul li a:hover, .active {
 
 
         <h3 class="left-text">Background</h3>
+        <p class="left-text">Link to Github repository: <a href= https://github.com/tanya-amert/chaosmonkeys target = "_blank">One Move Chess Github</a></p>
         <p class="left-text">
             Our chess game service creates an environment where users can play a single move and after they have made the move, they are given a new game. The goal of the user is to make the best possible move given the board state. Here is a demo of how to play the game:
         </p>
         <video width="640" height="360" controls>
             <source src="Schiller.mp4" type="video/mp4">
         </video>
-
 
         <p class="left-text">
             The game architecture and structure consists of several components designed to handle user requests, allocate chess boards based on other user's current game states and compute optimal moves.
