--- a/status.html
+++ b/status.html
@@ -106,7 +106,7 @@ nav ul li a:hover, .active {
     <section class="content">
         <h2>Monitoring the Status</h2>
         <h3 class="left-text">Status Page</h3>
-        <p class="left-text">info and screenshots about the status page</p>
+        <p class="left-text">Link to Github repository: <a href= https://github.com/Khizar-qureshi/status_page target = "_blank">Status Page Github</a></p>
         <p class="left-text">
             Here is a demo of how the Selenium bots register, log in, and make a move to simulate the user experience and ensure all of these components are functioning correctly:
         </p>
