--- a/index.html
+++ b/index.html
@@ -114,6 +114,9 @@ nav ul li a:hover, .active {
             failures to identify weaknesses before they impact users. By simulating real-world failures, teams can ensure their 
             web services remain resilient under unexpected conditions.
         </p>
+        <p class="left-text">
+            Link to our Project Proposal: <a href=comps_proposal.pdf target = "_blank" >Chaos Monkeys Proposal</a>
+        </p>
 
         <p class="left-text">
             If you are interested in learning about the structure of our project, visit the 
