finished status page part of website

--- a/status.html
+++ b/status.html
@@ -104,9 +104,15 @@ nav ul li a:hover, .active {
     </nav>
 
     <section class="content">
-        <h2>Monitoring the Status</h2>
+        <h2>External Monitoring</h2>
         <h3 class="left-text">Status Page</h3>
         <p class="left-text">Link to Github repository: <a href= https://github.com/Khizar-qureshi/status_page target = "_blank">Status Page Github</a></p>
+        <p class = "left-text"> The status page provides real-time updates on the game's performance and availability. </p>
+        <p class = "left-text"> Our status page is an essential component of chaos engineering. Monitoring our service's readiness and availability is crucial, as it improves our ability to recover in the event of a failure or incident. 
+            Moreover, when deliberately injecting failures, it is ideal that the services are already in a healthy state. 
+            The status page is a great tool for double-checking that everything is running well before simulating disruptions.
+        </p>
+        
         <p class="left-text">
             Here is a demo of how the Selenium bots register, log in, and make a move to simulate the user experience and ensure all of these components are functioning correctly:
         </p>
