--- a/scaling.html
+++ b/scaling.html
@@ -186,7 +186,115 @@ nav ul li a:hover, .active {
 
 
         <h3 class="left-text">Load Testing</h3>
-        <p class="left-text">info here</p>
+           <p class="left-text">
+               We saw that load testing was crucial for making sure that our system could handle increasing traffic
+               while maintaining performance and stability. To see why, visit the <a href="/project-outline">Project
+                   Outline</a> tab. After seeing the need for load testing, we explored different methods to
+               simulate high user activity and assess our system's performance under heavy load. Through testing, we came up with the following
+               methods:
+           </p>
+
+
+           <h4 class="left-text">Simulated User Load</h4>
+           <p class="left-text">
+               Simulated user load testing involves creating virtual bot users that perform real gameplay actions such as registering,
+               logging in, making moves, and joining games. This allows us to measure response times and API efficiency
+               under different traffic conditions.
+           </p>
+           <p class="left-text">
+               One of the key advantages of simulated load testing is its ability to simulate real-world scenarios without
+               affecting actual players.
+           </p>
+           <p class="left-text">
+               To achieve this, we created python load testing script that:
+           </p>
+           <ul class="left-text">
+               <li>Registers and authenticates bot users dynamically based on test parameters.</li>
+               <li>Assigns users to games while keeping bot activity separate from real players.</li>
+               <li>Tracks API response times, errors, and performance bottlenecks.</li>
+           </ul>
+
+
+           <div class="center-text">
+               <img src="loadtest.png" alt="Simulated User Load Testing" width="700">
+
+
+           </div>
+
+
+           <h4 class="left-text">Stress Testing</h4>
+           <p class="left-text">
+               Stress testing examines how the system performs under extreme conditions, pushing it beyond typical
+               usage levels to find out where our failure points are, and see how many users our system can support at the same time before
+               crashing.
+           </p>
+           <p class="left-text">
+               We implemented stress testing by:
+           </p>
+           <ul class="left-text">
+               <li>Gradually increasing the number of bot users and the frequency of moves.</li>
+               <li>Measuring response times and system behavior under increasing load.</li>
+               <li>Identifying bottlenecks and optimizing resource allocation.</li>
+           </ul>
+
+
+           <p class="left-text">
+               Instead of using external monitoring tools manually logged our info to track API
+               performance and detect issues in real time, rather than using cloud based tracking methods.
+           </p>
+
+
+           <div class="center-text">
+               <img src="log.png" alt="Stress Testing Logs" width="700">
+           </div>
+
+
+           <h4 class="left-text">User & Game Type Segmentation</h4>
+           <p class="left-text">
+               To make sure that real players using our service were not affected by test bot activity, we implemented a distinction between test
+               data and actual gameplay. We did this by adding two fields to our database:
+           </p>
+
+
+           <table class="left-text" border="1">
+               <tr>
+                   <th>Category</th>
+                   <th>Description</th>
+               </tr>
+               <tr>
+                   <td><strong>User Type</strong></td>
+                   <td>Separates <strong>regular</strong> users (who track progress) from <strong>bot</strong> users
+                       (who execute scripted actions for testing).</td>
+               </tr>
+               <tr>
+                   <td><strong>Game Type</strong></td>
+                   <td>Distinguishes between <strong>standard games</strong> (competitive matches) and <strong>load
+                           test games</strong> (used only for performance evaluation).</td>
+               </tr>
+           </table>
+
+
+           <p class="left-text">
+               This implementation allowed us to maintain a fair experience for real users while running large-scale
+               simulations.
+           </p>
+
+
+           <div class="center-text">
+               <img src="usergametype.png" alt="User and Game Type Database" width="700">
+           </div>
+
+
+           <p class="left-text">
+               With these methods we successfully:
+           </p>
+           <ul class="left-text">
+               <li>Simulated realistic player behavior at scale.</li>
+               <li>Identified and optimized performance bottlenecks.</li>
+               <li>Maintained a seamless experience for real players while running intensive load tests.</li>
+           </ul>
+
+
     </section>
 </body>
 </html>
