Added link to load testing repo

--- a/scaling.html
+++ b/scaling.html
@@ -358,6 +358,9 @@
                 <li>Maintained a seamless experience for real players while running intensive load tests.</li>
             </ul>
 
+            <a href="https://github.com/ortiza2/load_testing.git" target="_blank">Load Testing Repo</a>
+
+
 
     </section>
 </body>
