added final presi and removed python files

--- a/index.html
+++ b/index.html
@@ -119,6 +119,11 @@ nav ul li a:hover, .active {
         </p>
 
         <p class="left-text">
+            Link to our groups final presentation: <a href=final_presentation.pdf target = "_blank" >Chaos Monkeys Presentation</a>
+        </p>
+
+
+        <p class="left-text">
             If you are interested in learning about the structure of our project, visit the 
             <a href="/project-outline">Project Outline</a> tab. If you want to explore how we monitor system health, check out the 
             <a href="/status">Status</a> page. To dive into our approach to scalability, visit the 
