removed outline link

--- a/scaling.html
+++ b/scaling.html
@@ -247,8 +247,7 @@
             <h3 class="left-text">Load Testing</h3>
             <p class="left-text">
                 We saw that load testing was crucial for making sure that our system could handle increasing traffic
-                while maintaining performance and stability. To see why, visit the <a href="/project-outline">Project
-                    Outline</a> tab. After seeing the need for load testing, we explored different methods to
+                while maintaining performance and stability. After seeing the need for load testing, we explored different methods to
                 simulate high user activity and assess our system's performance under heavy load. Through testing, we
                 came up with the following
                 methods:
