removed repo and fixed links

--- a/scaling.html
+++ b/scaling.html
@@ -109,7 +109,7 @@
         <h2>Scaling the Software</h2>
         <h3 class="left-text">Database Sharding</h3>
         <p class="left-text">We knew that database sharding was an essential component of effective scaling. To see why,
-            visit the <a href="/project-outline">Project Outline</a> tab. After identifying the need for sharding, we
+            visit the <a href= project-outline.html>Project Outline</a> tab. After identifying the need for sharding, we
             needed to determine the best way to implement it for our system. Through research, we considered three
             different sharding strategies:</p>
         <div class="left-text">
