--- a/index.html
+++ b/index.html
@@ -125,9 +125,9 @@ nav ul li a:hover, .active {
 
         <p class="left-text">
             If you are interested in learning about the structure of our project, visit the 
-            <a href="/project-outline">Project Outline</a> tab. If you want to explore how we monitor system health, check out the 
-            <a href="/status">Status</a> page. To dive into our approach to scalability, visit the 
-            <a href="/scaling">Scaling</a> tab.
+            <a href= project-outline.html>Project Outline</a> tab. If you want to explore how we monitor system health, check out the 
+            <a href= status.html>Status</a> page. To dive into our approach to scalability, visit the 
+            <a href= scaling.html>Scaling</a> tab.
         </p>
         <p class="left-text">
             <br>  
