--- a/scaling.html
+++ b/scaling.html
@@ -301,8 +301,8 @@
 
 
             <p class="left-text">
-                Instead of using external monitoring tools manually logged our info to track API
-                performance and detect issues in real time, rather than using cloud based tracking methods.
+                Instead of using external monitoring tools, we manually logged our info to track API
+                performance and detect issues in real time.
             </p>
 
 
@@ -311,7 +311,7 @@
             </div>
 
 
-            <h4 class="left-text">User & Game Type Segmentation</h4>
+            <h4 class="left-text">User and Game Type</h4>
             <p class="left-text">
                 To make sure that real players using our service were not affected by test bot activity, we implemented
                 a distinction between test
